# qcodeeditwidget

./: .gitignore  CMakeLists.txt
include/QCodeEditWidget/: QCodeEditWidget  qcodeeditwidget.h
src/: CMakeLists.txt  qcodeeditwidget.cpp
tests/: CMakeLists.txt  main.cpp  qappmaindialog.cpp  qappmaindialog.h  qappmaindialog.ui
